fixing stupid centring issue on mobile. gah.

--- a/public/portfolio/master.css
+++ b/public/portfolio/master.css
@@ -624,9 +624,13 @@ ul {
   box-shadow: none;
 }
 
-.index h2 {
+.index>h2 {
+  display: inline-grid;
+  grid-template-columns: 1fr;
+  max-width: 900px;
   text-align: center;
-  margin: auto;
+  margin: 0;
+  padding: 0;
 }
 
 .title h1 {
@@ -784,12 +788,6 @@ ul {
   .wide {
     width: 90vw;
   }
-  .index {
-  display: inline-block;
-  max-width: 80vw;
-  margin-left: 5%;
-  padding-bottom: 2em;
-}
 
 .index:first-of-type {
   padding-top: 2em;
@@ -818,6 +816,22 @@ ul {
   ul {
     max-width: 70vw;
   }
+  .index {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-column-gap: 1em;
+  padding: auto;
+  max-width: 80vw;
+}
+
+.index>h2 {
+  display: inline-grid;
+  grid-template-columns: 1fr;
+  max-width: 900px;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+}
 }
 
 @media only screen and (max-width: 414px) {
@@ -852,12 +866,6 @@ ul {
     min-height: auto;
     padding: 10px;
   }
-  .index {
-  display: inline-block;
-  justify-content: space-around;
-  max-width: 80vw;
-  margin-left: 0;
-}
   h1 {
     font-size: 2.3em;
   }
